TAG: littriageload-6-0-24-1
TAG: littriageload-6-0-23-6
TAG: littriageload-6-0-23-5
DATE: 10/09/2024
STAFF: lec
wts2-1564/e4g-32/Lit Triage : needs_review/missing data from required field for DOI ID
NCBI fixed their issue Case # CAS-1381052-C7Y5N5: PubMed and E-Utils API Errors TRACKING:000435001374767
bin/littriageload.sh:commented out call to restore_needsreview_folder.sh
see bin/testeutilsapi.py for testing 

TAG: littriageload-6-0-23-4
TAG: littriageload-6-0-23-3
DATE: 03/07/2024
STAFF: lec
wts2-1426/fl2-775/Lit Triage/PDF names/remove "fail", "failure"

TAG: littriageload-6-0-23-2
TAG: littriageload-6-0-23-1
DATE: 02/19/2024
STAFF: lec
fix line 762/exception/print

TAG: littriageload-6-0-22-15
DATE: 08/28/2023
STAFF: lec
wts2-1155/fl2-491/GOC:  littriageload/merge littriage_goa/littriage_noctua folders -> littriage_go
#       modified:   bin/littriageload.py
#       modified:   bin/updateRelevance.py

TAG: littriageload-6-0-22-14
DATE: 08/22/2023
STAFF: lec
wts2-1258/fl2-488/littriage/secondary triage/GXD
#       modified:   bin/secondary.py

TAG: littriageload-6-0-22-13
DATE: 06/14/2023
STAFF: lec
added prepareForTesting.sh

TAG: littriageload-6-0-22-12
DATE: 01/11/2023
STAFF: lec
wts2-1092/fl2-122/GXD secondary supplemental data tweak
littriageload.py

TAG: littriageload-6-0-22-11
DATE: 01/03/2023
STAFF: lec
wts2-848/fl2-56/new supplemental logic
wts2-1081/fl2-100/Set Reviews to Not Routed status for GXD
littriageload.py
secondary.py

TAG: littriageload-6-0-22-10
TAG: littriageload-6-0-22-9
TAG: littriageload-6-0-22-8
TAG: littriageload-6-0-22-7
TAG: littriageload-6-0-22-6
TAG: littriageload-6-0-22-5
DATE: 11/30/2022, 12/07/2022
STAFF: lec
fl2/gxd secondary triage
mgidbmigration/fl2-gxd
littriageload/bin/GXD2aryRouter.py
littriageload/bin/secondary.py
autolittriage/figureText.py
MLtextTools/utilsLib.py

TAG: littriageload-6-0-22-4
TAG: littriageload-6-0-22-3
TAG: littriageload-6-0-22-2
TAG: littriageload-6-0-22-1
DATE: 11/23/2022, 11/25/2022
STAFF: lec