@@ -58,7 +58,7 @@
 #
 #	   split text into sections
 #
-#          if not (userSupplement, userPDF, userGO, userNLM, userDiscard):
+#          if not (userSupplement, userPDF, userGO, userGXDHT, userNLM, userDiscard):
 #		run mice check
 #
 #	   supplmental check
@@ -123,6 +123,7 @@ textSplitter = ''
 userSupplement = 'littriage_create_supplement'
 userPDF = 'littriage_update_pdf'
 userGO = 'littriage_go'
+userGXDHT = 'littriage_gxdht'
 userNLM = 'littriage_NLM_refresh'
 userDiscard = 'littriage_discard'
 
@@ -139,6 +140,7 @@ count_doipubmedadded = 0
 count_mismatchedtitles = 0
 count_lowextractedtext = 0
 count_userGO = 0
+count_userGXDHT = 0
 
 diag = ''
 diagFile = ''
@@ -1467,6 +1469,7 @@ def processPDFs():
     global count_processPDFs
     global count_needsreview
     global count_userGO
+    global count_userGXDHT
     global count_userPDF
     global count_userNLM
     global count_duplicate
@@ -1545,7 +1548,7 @@ def processPDFs():
         # only interested in running checkMice for curator folders, etc.
         # if non-refText section checkMice = false, then isDiscard = relevanceDiscardKey
         #
-        if userPath not in (userSupplement, userPDF, userGO, userNLM, userDiscard):
+        if userPath not in (userSupplement, userPDF, userGO, userGXDHT, userNLM, userDiscard):
             if bodyText.lower().find(checkMice) < 0 \
                 and figureText.lower().find(checkMice) < 0 \
                 and suppText.lower().find(checkMice) < 0 \
@@ -1559,7 +1562,7 @@ def processPDFs():
         # ignore 'bonferroni correction'
         checkErratum = 1
         isErratum = 0
-        if userPath not in (userSupplement, userPDF, userGO, userNLM, userDiscard) and objType not in ('pm'):
+        if userPath not in (userSupplement, userPDF, userGO, userGXDHT, userNLM, userDiscard) and objType not in ('pm'):
             diagFile.write('ERRATUM:searching:%s, %s, %s\n' % (objId, userPath, pdfFile))
             for e in erratumExcludeList:
                 if bodyText.lower().find(e) >= 0:
@@ -1707,7 +1710,6 @@ def processPDFs():
             #    isDiscard = relevanceNotSpecKey
 
             #
-            # if same pdf is placed in userSupplement,userPDF,userGO,userNLM
             # skip, no need to report this as an error
             #
             if refKey in refKeyList:
@@ -2151,6 +2153,7 @@ def writeErrors():
     global count_processPDFs
     global count_needsreview
     global count_userGO
+    global count_userGXDHT
     global count_userPDF
     global count_userNLM
     global count_duplicate
@@ -2190,6 +2193,7 @@ def writeErrors():
     allCounts = allCounts + 'Records with Updated PDF\'s: ' + str(count_userPDF) + '<BR>\n\n'
     allCounts = allCounts + 'Records with Updated NLM information: ' + str(count_userNLM) + '<BR>\n\n'
     allCounts = allCounts + 'Records with GO information: ' + str(count_userGO) + '<BR>\n\n'
+    allCounts = allCounts + 'Records with GXD-HT information: ' + str(count_userGXDHT) + '<BR>\n\n'
     allCounts = allCounts + 'Records with Duplicates: ' + str(count_duplicate) + '<BR>\n\n'
     allCounts = allCounts + 'Records with DOI or Pubmed Ids added: ' + str(count_doipubmedadded) + '<BR>\n\n'
     allCounts = allCounts + 'Records with Mismatched titles: ' + str(count_mismatchedtitles) + '<BR>\n\n'
